# resource-builder

./: .appveyor.yml  .gitignore  README.md  resource-builder.py
example/: CMakeLists.txt  main.cpp
example/res/: resources.json
example/res/txt/: hello.txt
res-example/: resources.json
